--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@
     --color-white: #ffffff;
     --font-primary: 'Poppins', sans-serif;
 }
+
 header {
     max-width: 1200px;
     margin: 0 auto;
@@ -92,9 +93,11 @@ nav h1 {
     margin-top: 16px;
     cursor: pointer;
 }
+
 .btn i {
     margin-left: 8px;
 }
+
 .btn:hover {
     background-color: transparent;
     color: var(--color-pink);
@@ -102,7 +105,7 @@ nav h1 {
     transition: 0.3s;
 }
 
-.hero-image{
+.hero-image {
     background-image: url("../images/Circle\ design.svg");
     width: 475px;
     height: 475px;
@@ -112,18 +115,88 @@ nav h1 {
     margin-bottom: 100px;
 }
 
-@media screen and (max-width: 768px) {
-}
-.logo-container{
+@media screen and (max-width: 768px) {}
+
+.logo-container {
     max-width: 1110px;
     margin-top: 70px;
     margin: 0 auto;
-    border-top: 1.5px solid;
-    border-bottom: 1.5px solid;
-    border-image: linear-gradient(to right, transparent, #C0CCDA, transparent) 1    ;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-image: linear-gradient(to right, transparent, #E02C6D, transparent)1;
 }
-.logo-image{
+
+.logo-image {
     display: flex;
     gap: 61px;
     padding: 44px 0px;
+}
+
+.collection-container {
+    max-width: 1110px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+.collection-container h1 {
+    font-size: 36px;
+    font-weight: 900;
+    color: var(--color-gray-700);
+    margin-bottom: 40px;
+    text-align: center;
+}
+.collection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px; 
+}
+.collection-card {
+    width: 330px;
+    height: 475px;
+    padding: 17px 14px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+}
+
+.collection-card h3 {
+    font-size: 28px;
+    font-weight: 500;
+    color: var(--color-gray-900);
+    margin: 12px 0px;
+}
+
+.collection-card p {
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 143%;
+    letter-spacing: 1.8%;
+    color: var(--color-gray-50);
+    margin: 5px 0px;
+}
+
+.collection-card .price {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    color: var(--color-gray-50);
+}
+.collection-card .rating i {
+    color: #FB8200;
+}
+.rating {
+    font-size: 18px;
+}
+.collection-container .btn {
+    display: block;
+    margin: 40px auto 0 auto;
+    background-color: transparent;
+    color: var(--color-pink);
+    margin-bottom: 100px;
+    border-radius: 2px;
+}
+.collection-container .btn:hover {
+    background-color: var(--color-pink);
+    color: var(--color-white);
+    transition: 0.3s;
 }
