--- a/styles/style.css
+++ b/styles/style.css
@@ -315,6 +315,7 @@ nav h1 {
 
 .footer-container {
     max-width: 1440px;
+    margin: 0 auto;
     padding: 50px 0px;
     background-color: var(--color-pink);
 }
